[package]
name = "diesel_sample"
version = "0.1.0"
authors = ["takurinton <takurinton@takurinton.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4", features = ["json"] }
diesel = { version = "1.4.6", features = ["sqlite"] }
dotenv = "0.15"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.116"
serde_json = "1.0.58"
env_logger = "0.5.12"
log = "0.4.6"

[[bin]]
name = "show_posts"
doc = false

[lib]
doc = false